<resources>
    <string name="app_name">Trending Things</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login or Signup</string>
    <string name="title_list_artcles"></string>
    <string name="title_signup">SignUp</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="SignOut">SignOut</string>
    <string name="TakePhoto">Take a photo</string>
    <string name="GiftName">Denumire</string>
    <string name="GiftDescription">Descriere</string>
    <string name="GiftCategory">Categorie</string>
    <string name="ToSex">Sex</string>
    <string name="title_activity_choose_action">ChooseAction</string>
    <string name="AddGift">Adauga un cadou gasit</string>
    <string name="SearchGift">Cauta un cadou</string>
    <string name="ViewGropus">Grupuri</string>
    <string name="Suggest">Sugereaza o categorie de cadouri</string>
    <string name="title_activity_my_groups">MyGroups</string>
    <string name="CreateNewGroup">Creaza un nou group</string>
    <string name="title_activity_new_group">NewGroup</string>
    <string name="GroupName">Denumire</string>
    <string name="GroupDescription">Descriere</string>
    <string name="GroupDate">Data party</string>
    <string name="CreateNewGroupButton">Creaza grup</string>
    <string name="CancelNewGroupButton">Anuleaza</string>
    <string name="title_activity_sugest_category">SugestCategory</string>
    <string name="SuggestCategoryLabel">Denumire categorie noua</string>
    <string name="SaveSuggestedCategory">Trimite sugestia</string>
    <string name="CancelSuggestedCategory">Anuleaza</string>
    <string name="title_activity_group_view">GroupView</string>
    <string name="GroupViewAddUserInGroup">Adauga utilizator</string>
    <string name="GroupViewAddComment">Adauga un comentariu</string>
    <string name="GrouViewAddCommentButton">Adauga</string>
    <string name="title_activity_add_user_to_group">AddUserToGroup</string>
    <string name="SearchUserName">Utilizator cautat</string>
    <string name="SearchUserNameButton">Cauta utilizator</string>
    <string name="title_activity_view_invites">ViewInvites</string>
    <string name="saveGift">Salveaza cadou</string>
    <string name="title_activity_search_gift">SearchGift</string>
    <string name="giftPrice">Pret</string>
    <string name="giftAge">Varsta</string>
    <string name="searchForGift">Cauta</string>
    <string name="title_activity_view_gift">ViewGift</string>
    <string name="recommendToGroup">Recomanda in grup</string>
    <string name="backToSearch">Inapoi la cautare</string>
    <string name="chooseGroup">Alege group pentru cadou</string>
    <string name="viewGifts">Vezi cadouri sugerate</string>
    <string name="title_activity_view_group_gifts">ViewGroupGifts</string>
</resources>
