<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.trendingthings.GroupView">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/GropuViewName"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/GroupViewDescription"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GroupViewAddUserInGroup"
            android:id="@+id/GroupViewAddNewUserButton" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:id="@+id/GroupViewCommentsListView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.14" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/GroupViewAddComment"
                android:id="@+id/GroupViewAddCommentText"
                android:layout_weight="0.21"
                android:layout_gravity="center_vertical" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/GrouViewAddCommentButton"
                android:id="@+id/GroupViewAddCommentButton"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
