<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.trendingthings.SignUpActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:id="@+id/loginUsernameLabel"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/loginUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <requestFocus/>
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:id="@+id/loginEmailLabel"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <requestFocus/>
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:id="@+id/loginPasswordLabel"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/signupButtonToParse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_signup"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>